# duosight

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.devcontainer/: devcontainer.json
.devcontainer/.devcontainer/: devcontainer.json
HELP/: I rebuild my board now I can't SSH.md  Toradex_board_wont_Interface.md
examples/: demo-MLX-ir-dump.txt
libduosight/: CMakeLists.txt
libduosight/include/: i2cUtils.h  i2cUtils.hpp  mlx90640Transport.h
libduosight/src/: i2cUtils.cpp  mlx90640Transport.cpp
libduosight/src/unit-tests/: test_i2cUtils.cpp
mlx90640-reader/: CMakeLists.txt
mlx90640-reader/include/: MLX90640Reader.h  MLX90640Reader.hpp  MLX90640Regs.hpp
mlx90640-reader/src/: MLX90640Reader.cpp  main.cpp
src/: main.cpp
unit-tests/: README.md  Test.sh  test_i2cUtils.cpp  test_mlx90640_gui.cpp  test_mlx90640_reader.cpp
